# PyOrchestrator

./: .gitignore  LICENSE  README.md  orchestrator.db  pyproject.toml
app/: main.py
app/core/: logging_config.py  utils.py
app/crud/: project.py  run.py  schedule.py
app/database/: base.py
app/models/: project.py  run.py  schedule.py
app/routes/: projects.py  runs.py  schedules.py
app/schemas/: project.py  run.py  schedule.py
app/services/: executor.py  scheduler.py
templates/: add_project.html  add_schedule.html  base.html  edit_project.html  edit_schedule.html  index.html  project_detail.html  run_detail.html  schedule_detail.html
